--- a/template/src/App.css
+++ b/template/src/App.css
@@ -1,7 +1,9 @@
-html {
-    background-color: white;
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
-body {
-    background: #F6F7FF;
+html {
+    font-family: Roboto;
 }
